fix: cutoff logos height on safari, color of footer

--- a/src/theme/scss/components/_backed-by-component.scss
+++ b/src/theme/scss/components/_backed-by-component.scss
@@ -23,28 +23,31 @@
     margin-top: 100px;
     align-items: center;
     @include mobile {
-      margin-top: 70px; 
-      flex-direction: column; 
+      margin-top: 70px;
+      flex-direction: column;
     }
 
     a {
-      display: flex; 
+      display: flex;
       cursor: pointer;
       pointer-events: auto;
     }
   }
 
   &--logo {
-    margin: 40px; 
-    margin-bottom: 100px; 
+    height: 50px;
+    margin: 40px;
+    margin-bottom: 100px;
     img {
-      max-height: 50px; 
+      height: 50px;
+      width: auto;
     }
 
     @include mobile {
-      margin-bottom: 70px; 
+      margin-bottom: 70px;
+      height: 30px;
       img {
-        max-height: 30px; 
+        height: 30px;
       }
     }
   }
